Generate scorecard, fix scroll issues on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@
 @mixin name - function (used @include name(param))
 $name - variable
 */
-header .title {
+header .title, .clocking::after {
   position: absolute;
   left: 0;
   right: 0;
@@ -23,29 +23,332 @@ header .title .title-logo {
   user-select: none;
 }
 
-body {
+html, body {
   margin: 0;
+  overflow-x: hidden;
+  position: relative;
+}
+
+.bg {
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  position: fixed;
+  z-index: 0;
+  background: url("../images/textures/tactile_noise.png");
+  overflow-x: hidden;
 }
 
 header {
   width: 100%;
   height: 80px;
-  background: orange;
+  background: #141414;
   position: fixed;
+  z-index: 9999999999;
+  box-shadow: 0px 0px 0px #111;
+  padding-left: 10px;
+  padding-right: 10px;
+  box-sizing: border-box;
+  transition: 0.3s;
 }
 header .title {
   height: inherit;
-  width: 330px;
+  max-width: 300px;
+  padding-left: 10px;
+  padding-right: 10px;
+  box-sizing: border-box;
 }
 header .title .title-logo {
   height: 60px;
 }
 header .title .title-name {
-  font-family: "Days One", serif;
+  font-family: "Ubuntu", "Raleway", "Days One", serif;
   color: white;
-  font-size: 40px;
+  font-size: 32px;
   margin: 0;
   position: absolute;
-  right: 0;
+  right: 10px;
   line-height: 80px;
+}
+
+.scorecard {
+  height: calc(100% - 80px);
+  position: absolute;
+  display: flex;
+  z-index: 10;
+  top: 80px;
+  background: orange;
+  left: 200vw;
+  width: 100vw;
+  overflow: hidden;
+}
+.scorecard .scorecard-wrap {
+  background: purple;
+  width: 100%;
+  position: relative;
+  overflow: hidden;
+}
+.scorecard .scorecard-wrap .databody {
+  width: 78vw;
+  background: gray;
+  position: absolute;
+  right: 0;
+  top: 0;
+  overflow-x: scroll;
+  height: calc(5vh * 11);
+}
+.scorecard .scorecard-wrap .databody .data-col {
+  position: absolute;
+}
+.scorecard .scorecard-wrap .databody .data-col .tee0, .scorecard .scorecard-wrap .databody .data-col .r1 {
+  background: #4040d6;
+}
+.scorecard .scorecard-wrap .databody .data-col .tee1, .scorecard .scorecard-wrap .databody .data-col .r2 {
+  background: #dc4747;
+}
+.scorecard .scorecard-wrap .databody .data-col .tee2, .scorecard .scorecard-wrap .databody .data-col .r3 {
+  background: #333;
+}
+.scorecard .scorecard-wrap .databody .data-col .tee3, .scorecard .scorecard-wrap .databody .data-col .r4 {
+  background: #ccc;
+}
+.scorecard .scorecard-wrap .databody .data-col div {
+  height: 5vh;
+  box-sizing: border-box;
+  width: 26vw;
+  position: relative;
+  text-align: center;
+  line-height: 5vh;
+  font-family: "Noto Sans";
+}
+.scorecard .scorecard-wrap .headers {
+  width: 20vw;
+  background: purple;
+  position: absolute;
+  top: 0;
+}
+.scorecard .scorecard-wrap .headers .tee-head {
+  height: 20vh;
+  position: relative;
+}
+.scorecard .scorecard-wrap .headers div {
+  box-sizing: border-box;
+  background: green;
+  height: 5vh;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  font-family: "Ubuntu";
+}
+.scorecard .scorecard-wrap .headers div input {
+  width: 100%;
+  height: 100%;
+  border: none;
+  box-sizing: border-box;
+  outline: none;
+  text-align: center;
+  font-size: 15px;
+  font-family: "Ubuntu";
+}
+
+.course-select {
+  width: 100%;
+  position: relative;
+  z-index: 10;
+  margin-top: 100px;
+  padding-bottom: 30px;
+}
+.course-select .card-wrap {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  width: 100%;
+  bottom: 0;
+  overflow: hidden;
+}
+.course-select .card-wrap .card-wrap-title {
+  color: white;
+  font-family: "Ubuntu";
+  margin-top: 0;
+  margin-bottom: 30px;
+  background: #1b1b1b;
+  border-radius: 5px;
+  height: 50px;
+  line-height: 50px;
+  width: 40vh;
+  text-align: center;
+  border-right: 3px solid #ef0000;
+  border-bottom: 3px solid #ef0000;
+  box-sizing: border-box;
+  box-shadow: 3px 3px 5px black;
+  position: relative;
+  left: 0;
+  right: 0;
+}
+.course-select .card-wrap .card {
+  width: 40vh;
+  background: #1b1b1b;
+  border-right: 3px solid #ef0000;
+  border-bottom: 3px solid #ef0000;
+  box-sizing: border-box;
+  margin-top: 5px;
+  margin-bottom: 5px;
+  position: relative;
+  border-radius: 5px;
+  color: #cfcfcf;
+  left: 0;
+  right: 0;
+  padding-bottom: 5px;
+  box-shadow: 3px 3px 5px black;
+}
+.course-select .card-wrap .card .emp {
+  color: white;
+  font-size: 14px;
+}
+.course-select .card-wrap .card .card-info {
+  position: absolute;
+  left: calc(15vh + 10px);
+  top: 50px;
+  font-family: "Noto Sans";
+  font-size: 12px;
+}
+.course-select .card-wrap .card .card-desc {
+  position: relative;
+  margin-top: 10px;
+  margin-bottom: 5px;
+  left: 10px;
+  width: calc(40vh - 20px);
+  font-family: "Noto Sans";
+  font-size: 12px;
+}
+.course-select .card-wrap .card .load-desc {
+  border-radius: 5px;
+  border-right: 3px solid #074765;
+  border-bottom: 3px solid #074765;
+  background: #007e9a;
+  width: calc(100% - 30px);
+  margin: auto;
+  margin-top: 25px;
+  margin-bottom: 15px;
+  text-align: center;
+  padding: 5px;
+  font-family: "Ubuntu";
+  transition: 0.3s;
+  position: relative;
+}
+.course-select .card-wrap .card .load-desc:active {
+  border-right: 0px solid white;
+  border-bottom: 0px solid white;
+  margin-top: 28px;
+  margin-left: calc(auto+3px);
+}
+.course-select .card-wrap .card .select-course {
+  border-radius: 5px;
+  border-right: 3px solid #155600;
+  border-bottom: 3px solid #155600;
+  background: #077500;
+  width: calc(100% - 30px);
+  margin: auto;
+  margin-top: 25px;
+  margin-bottom: 15px;
+  text-align: center;
+  padding: 5px;
+  font-family: "Ubuntu";
+  transition: 0.05s;
+  position: relative;
+}
+.course-select .card-wrap .card .select-course:active {
+  border-right: 0px solid white;
+  border-bottom: 0px solid white;
+  margin-top: 28px;
+  margin-left: calc(auto+3px);
+}
+
+.no-info .card-img {
+  height: 15vh;
+  width: 100%;
+  background-position: center center;
+  background-size: cover;
+  border-radius: 5px;
+  border-right: 0px solid #ef0000;
+  border-bottom: 0px solid #ef0000;
+  box-sizing: border-box;
+  transition: 0.3s;
+}
+.no-info .card-title {
+  position: absolute;
+  text-align: center;
+  width: 100%;
+  top: 6vh;
+  font-family: "Raleway";
+  font-weight: 700;
+  transition: 0.3s;
+  left: 0;
+  font-size: 30px;
+  background: rgba(0, 0, 0, 0.3);
+}
+.no-info .card-info, .no-info .card-desc {
+  opacity: 0;
+  transition: 0.2s;
+  transition-delay: 0.3s;
+}
+
+.has-info .card-img {
+  height: 15vh;
+  width: 15vh;
+  border-radius: 5px;
+  border-right: 3px solid #ef0000;
+  border-bottom: 3px solid #ef0000;
+}
+.has-info .card-title {
+  width: calc(100% - 15vh);
+  left: 15vh;
+  top: 10px;
+  font-size: 16px;
+  background: rgba(0, 0, 0, 0);
+}
+.has-info .card-info, .has-info .card-desc {
+  opacity: 1;
+}
+
+.clocking {
+  color: #007e9a;
+}
+.clocking::after {
+  content: "";
+  border-radius: 100%;
+  border: 5px solid transparent;
+  border-top: 5px solid white;
+  animation: 0.5s rotate linear infinite;
+  height: 10px;
+  width: 10px;
+  left: 0;
+  top: 0;
+}
+
+@keyframes rotate {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+@keyframes slideout {
+  from {
+    left: 0;
+  }
+  to {
+    left: -200vw;
+  }
+}
+@keyframes slidein {
+  from {
+    left: 200vw;
+  }
+  to {
+    left: 0;
+  }
 }
