--- a/scss/_ext.scss
+++ b/scss/_ext.scss
@@ -24,3 +24,11 @@ $name - variable
     bottom: 0;
     margin: auto;
 }
+
+$cell-height: 5vh;
+$cell-width: 26vw;
+
+$black-tee: #333;
+$red-tee: #dc4747;
+$blue-tee: #4040d6;
+$white-tee: #ccc;
